--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,61 @@
+absl-py==0.9.0
+amqp==2.5.2
+astunparse==1.6.3
+attrs==19.3.0
+billiard==3.6.3.0
+cachetools==4.1.0
+celery==4.4.2
+certifi==2019.11.28
+chardet==3.0.4
+click==7.1.1
 flasgger==0.9.4
 Flask==1.1.1
-gunicorn==19.9.0
+gast==0.3.3
+google-auth==1.14.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.28.1
+h5py==2.10.0
+idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 joblib==0.14.1
 jsonschema==3.2.0
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 kombu==4.6.8
+Markdown==3.2.1
 MarkupSafe==1.1.1
 mistune==0.8.4
 nltk==3.4.5
 numpy==1.18.2
+oauthlib==3.1.0
+opt-einsum==3.2.1
 pandas==1.0.3
+protobuf==3.11.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2019.3
 PyYAML==5.3.1
 redis==3.4.1
 requests==2.23.0
+requests-oauthlib==1.3.0
+rsa==4.0
 scikit-learn==0.22.2.post1
 scipy==1.4.1
 six==1.14.0
 sklearn==0.0
+tensorboard==2.2.1
+tensorboard-plugin-wit==1.6.0.post3
+tensorflow==2.2.0rc3
+tensorflow-estimator==2.2.0
+termcolor==1.1.0
 urllib3==1.25.8
 vine==1.3.0
 waitress==1.4.3
 Werkzeug==1.0.0
+wrapt==1.12.1
 xgboost==0.90
