--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ six==1.14.0
 sklearn==0.0
 tensorboard==2.2.1
 tensorboard-plugin-wit==1.6.0.post3
-tensorflow==2.0.0-rc2
+tensorflow==2.1.0
 tensorflow-estimator==2.2.0
 termcolor==1.1.0
 urllib3==1.25.8
